--- a/templates/taxi.html
+++ b/templates/taxi.html
@@ -196,7 +196,7 @@
             let correo = "";
 
             try {
-                const usuario = JSON.parse(localStorage.getItem("usuario_gavvip"));
+                const usuario = JSON.parse(localStorage.getItem("registro_usuario"));
                 if (usuario) {
                     nombre = usuario.nombre || "";
                     telefono = usuario.telefono || "";
